--- a/public/views/subjectinfo.client.view.html
+++ b/public/views/subjectinfo.client.view.html
@@ -202,7 +202,7 @@
         </div>
         <div class="col-sm-3">
           <p> City: </p>
-          <input type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' ng-model="information.city" required="" class="form-control"></input>
+          <input type="text" onkeypress='return event.charCode === 32 || event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' ng-model="information.city" required="" class="form-control"></input>
           
         </div>
         <div class="col-sm-2">
