fixed semicolon and other jshint errors

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -35,6 +35,7 @@ div#scripts
     script(type='text/javascript', src='/js/controllers/subject.status.client.controller.js')
     script(type='text/javascript', src='/js/controllers/subjectselect.client.controller.js')
     script(type='text/javascript', src='/js/controllers/subjectSetupController.js')
+    script(type='text/javascript', src='/js/controllers/subject_search.js')
 
     if (process.env.NODE_ENV == 'development')
         //Livereload script rendered 
