--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -23,11 +23,11 @@
             </div>
             <!--First Name-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="First_Name" required type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="First Name" autocomplete="off" ng-model="information.firstname" class="form-control"/>
+              <input name="First_Name" ng-required="true" type="text" placeholder="First Name" autocomplete="off" ng-model="information.firstname" class="form-control"/>
             </div>
             <!--Middle Initial-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="Middle_Initial" required type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' pattern=".{1}" placeholder="MI" autocomplete="off" ng-model="information.middlename" class="form-control"/>
+              <input name="Middle_Initial" ng-required="true" type="text" placeholder="MI" autocomplete="off" ng-model="information.middlename" class="form-control"/>
             </div>
             <!--Last Name-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ">
